# local-ai-agent

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  后续需求.md  本地AI-Agents部署流程.md
apps/cli-ink/: package-lock.json  package.json  tsconfig.json
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
bff/: __init__.py  __main__.py  app.py  deps.py  schemas.py  service.py
config/: git.yaml  policy.yaml  runtime.yaml
config/searxng/: settings.yml
config/tools/: code_exec.yaml  conversation_read.yaml  conversation_search.yaml  file_convert.yaml  file_delete.yaml  file_list.yaml  file_read.yaml  file_rename.yaml  file_write.yaml  git_commit.yaml  git_status.yaml  pip_install.yaml  shell_exec.yaml  skill_info.yaml  skill_list.yaml  skill_register.yaml  skill_run.yaml  skill_unregister.yaml  (+3 more)
core/: __init__.py  agent.py  audit_logger.py  config.py  context_manager.py  conversation_store.py  input_utils.py  llm_client.py  memory_manager.py  policy_engine.py  prompt_builder.py  runtime.py  tool_registry.py  tool_router.py
gateway/: app.py  audit_logger.py  context_manager.py  conversation_memory.py  llm_client.py  memory_writeback.py  policy_engine.py  prompt_builder.py  requirements.txt  session_store.py  tool_registry.py  tool_router.py  workspace_context.py
scripts/: check-env.ps1  check-env.sh  init-workspace.ps1  init-workspace.sh  quick-start.ps1  quick-start.sh  stop-backend.ps1  stop-backend.sh
tests/: test_policy_engine.py  test_trash_manager.py
tui/: __init__.py  __main__.py  app.py  utils.py
(+44 files in other folders)
